...
        navigationController?.navigationBar.tintColor = UIColor.white

        navigationItem.standardAppearance = navBarAppearance
        navigationItem.scrollEdgeAppearance = navBarAppearance
        navigationItem.compactAppearance = navBarAppearance

        navigationItem.title = "Create PrizmSet"
        
        navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Create", style: .plain, target: self, action: #selector(doneAction))
    }
    
    
    func setUpTableView() {
...
            cell.backgroundColor = Colors.background
            cell.clearAllSubviews()
            cell.layer.sublayers?.removeAll()
            cell.clipsToBounds = true
            cell.contentView.clipsToBounds = true
    
            cell.accessibilityLabel = "titleCell"
            
            let intro = UIView(frame: CGRect(x: 20, y:20, width: view.frame.width - 40, height: 145))
            cell.addSubview(intro)
            intro.backgroundColor = Colors.green4;
            intro.layer.cornerRadius = 16;
            intro.clipsToBounds = true
...
            let titlePlaceHolder = NSAttributedString(string: prizmTitle, attributes: [NSAttributedString.Key.foregroundColor: UIColor.white])
            title.attributedPlaceholder = titlePlaceHolder
            title.textColor = UIColor.white
            title.font = UIFont(name: Fonts.garetBook, size: 25)
            //title.tag = -2
            title.delegate = self
            title.accessibilityLabel = "titleTextField"
            title.clipsToBounds = true
            
            //white line underneath title
            let introPath = UIBezierPath()
            introPath.move(to: CGPoint(x: 35, y: 60))
            introPath.addLine(to: CGPoint(x: view.frame.width-40, y: 60))
...
            intro.addSubview(description)
            let descriptionPlaceHolder = NSAttributedString(string: prizmDescription, attributes: [NSAttributedString.Key.foregroundColor: UIColor.white])
            description.attributedPlaceholder = descriptionPlaceHolder
            description.textColor = UIColor.white
            description.font = UIFont(name: Fonts.garetBook, size: 18)
            description.delegate = self
            description.accessibilityLabel = "descriptionTextField"
            description.clipsToBounds = true
            
            //white line underneath description
            let descriptPath = UIBezierPath()
            descriptPath.move(to: CGPoint(x: 35, y: 100))
            descriptPath.addLine(to: CGPoint(x: view.frame.width-40, y: 100))
...
            cell.selectionStyle = UITableViewCell.SelectionStyle.none
            cell.layer.sublayers?.removeAll()
            cell.clipsToBounds = true
            cell.contentView.clipsToBounds = true
           
            cell.backgroundColor = Colors.background
            cell.accessibilityLabel = "addNewFlashPrizmCell"
            
            let newPrizmView = UIView(frame: CGRect(x: 20, y:5, width: view.frame.width - 40, height: 40))
            cell.addSubview(newPrizmView)
            newPrizmView.backgroundColor = Colors.green2
            newPrizmView.layer.cornerRadius = 16;
            newPrizmView.clipsToBounds = true
...
            let addNewPrizmButton: UIButton = UIButton(frame: CGRect(x:24, y:5, width: view.frame.width - 40, height: 30.00))
            newPrizmView.addSubview(addNewPrizmButton)
            addNewPrizmButton.setTitle("+ Add new Prizm", for: .normal)
            addNewPrizmButton.titleLabel?.font = UIFont(name: Fonts.gilmerBold, size: 18)
            addNewPrizmButton.addTarget(self, action: #selector(addNewPrizmAction), for: .touchUpInside)
            addNewPrizmButton.contentHorizontalAlignment = .left
            addNewPrizmButton.accessibilityLabel = "addNewFlashPrizmButton"
            
           return cell
        }
        
        // cell content for FlashPrizm itself
        else{
...

        dispatchGroup.enter()
        // uploading to Firebase
        FirebaseManager.shared.createPrizm(prizmName: prizmTitle, description: prizmDescription, className: prizmCategory, prizmDic: prizmContents, prizmOrder: runningOrder) { error in
            
            if let error = error {
                let alert = UIAlertController(title: "Alert", message: "Message", preferredStyle: UIAlertController.Style.alert)
                alert.message = error.localizedDescription
                alert.addAction(UIAlertAction(title: "ok", style: .default))
                self.present(alert,animated: true)
                return
            }
            dispatchGroup.leave()
...
