...
                                <rect key="frame" x="59.666666666666657" y="702" width="274" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="xBe-sa-TQu"/>
                                </constraints>
                                <color key="tintColor" name="Green1"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Log In" subtitle="" cornerStyle="large">
                                    <fontDescription key="titleFontDescription" name="GilmerBold" family="Gilmer Bold" pointSize="20"/>
                                    <color key="baseBackgroundColor" name="Green1"/>
                                </buttonConfiguration>
                                <connections>
                                    <segue destination="xO3-zy-WAj" kind="show" id="244-EL-1Fo"/>
                                </connections>
...
            <objects>
                <viewController id="xO3-zy-WAj" customClass="LoginViewController" customModule="FlashPrizm" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="wuB-zO-HNY">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SOp-TC-Hl6">
                                <rect key="frame" x="30" y="283" width="135" height="55"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="55" id="Fay-Sh-IhP"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="GilmerBold" family="Gilmer Bold" pointSize="50"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QGe-Ss-Cen">
                                <rect key="frame" x="30" y="458" width="333" height="50"/>
                                <color key="backgroundColor" name="Light Gray"/>
                                <fontDescription key="fontDescription" name="Garet-Book" family="Garet" pointSize="20"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="done" secureTextEntry="YES" textContentType="password"/>
                                <connections>
                                    <action selector="editPassword:" destination="xO3-zy-WAj" eventType="editingChanged" id="y10-nv-3Ap"/>
                                </connections>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nC2-w7-ZSi">
                                <rect key="frame" x="59.666666666666657" y="615.33333333333337" width="274" height="50"/>
...
                                    <color key="baseBackgroundColor" name="Green3"/>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="loginButton:" destination="xO3-zy-WAj" eventType="touchUpInside" id="5Hr-ut-XMe"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CYY-1f-85N">
                                <rect key="frame" x="30" y="378" width="333" height="50"/>
                                <color key="backgroundColor" name="Light Gray"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="BpE-Gi-LhQ"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Garet-Book" family="Garet" pointSize="20"/>
...
