...
        view.backgroundColor = Colors.background
        
        // Set up title
        let prizmLabel = UILabel()
        view.addSubview(prizmLabel)
        prizmLabel.font = UIFont(name: Fonts.gilmerBold, size: 50)
        prizmLabel.text = "PrizmSets"
        prizmLabel.textColor = Colors.black
        prizmLabel.sizeToFit()
        prizmLabel.translatesAutoresizingMaskIntoConstraints = false
        NSLayoutConstraint.activate([
            prizmLabel.leadingAnchor.constraint(equalTo: view.leadingAnchor, constant: 25),
            prizmLabel.topAnchor.constraint(equalTo: view.topAnchor, constant: 100)
...
        floatingButton.backgroundColor = Colors.green2
        floatingButton.setTitle("+", for: .normal)
        floatingButton.titleLabel?.font = UIFont(name: Fonts.gilmerBold, size: 50)
        floatingButton.layer.cornerRadius = 40
        floatingButton.translatesAutoresizingMaskIntoConstraints = false
        floatingButton.dropShadow()
        floatingButton.accessibilityLabel = "addFAB"
        NSLayoutConstraint.activate([
            floatingButton.trailingAnchor.constraint(equalTo: view.safeAreaLayoutGuide.trailingAnchor, constant: -20),
            floatingButton.bottomAnchor.constraint(equalTo: view.safeAreaLayoutGuide.bottomAnchor, constant: -20),
            floatingButton.widthAnchor.constraint(equalToConstant: 77),
            floatingButton.heightAnchor.constraint(equalToConstant: 77)
        ])
...
