//
//  WelcomeViewController.swift
//  FlashPrizm
//
//  Created by HowardWu on 2/10/23.
//

import UIKit

class WelcomeViewController: UIViewController {

    override func viewDidLoad() {
        super.viewDidLoad()

        // Do any additional setup after loading the view.
//        if FirebaseManager.shared.currentUser != nil {
//            let storyboard = UIStoryboard(name: "Main", bundle: nil)
//            let mainTBC = storyboard.instantiateViewController(withIdentifier: Storyboard.mainTBC)
//
//            (UIApplication.shared.connectedScenes.first?.delegate as? SceneDelegate)?.changeRootViewController(mainTBC)
//            return
//        }
    }
    
    
}
